<resources>
    <string name="app_name">Well Being</string>
    <string name="name_hint">User Name</string>
    <string name="name_hint1">Email Id</string>
    <string name="name_hint2">Password</string>
    <string name="name_hint3">ReEnter Password</string>
    <string name="name_hint4">Emergency No1</string>
    <string name="name_hint5">Emergency No2</string>
    <string name="user_name">User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="emergency_no1">Emergency No1</string>
    <string name="emergency_no2">Emergency No2</string>
    <string name="emergency_no3">Emergency No3</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email Id</string>
    <string name="enter_mobileno">Enter MobileNo</string>
    <string name="register">Register</string>
    <string name="submit">submit</string>
    <string name="title_activity_page1">page1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="speed_monitor">Speed Monitor</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="activate_fall_alert_mode">Activate Fall Alert Mode</string>
    <string name="fall_alert">Fall Alert</string>
    <string name="login">Login</string>
</resources>
