<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tool"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Account"
            android:icon="@drawable/user_account_symbol"
            android:title="@string/account" />
        <item
            android:id="@+id/SpeedMonitor"
            android:icon="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:title="@string/speed_monitor" />
        <item
            android:id="@+id/Signout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/sign_out" />
        <item
            android:id="@+id/Help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="Help" />
    </group>

</menu>
